--- a/MovieDetailViewController.xib
+++ b/MovieDetailViewController.xib
@@ -37,15 +37,25 @@
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="pOg-oW-jcY">
                             <rect key="frame" x="0.0" y="38" width="320" height="233"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" red="0.91105309311224492" green="0.91105309311224492" blue="0.91105309311224492" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" red="0.86467633929999999" green="0.86467633929999999" blue="0.86467633929999999" alpha="1" colorSpace="calibratedRGB"/>
                         </imageView>
                         <view contentMode="scaleToFill" id="WKh-P6-JXS">
                             <rect key="frame" x="-2" y="38" width="320" height="1"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.86467633929999999" green="0.86467633929999999" blue="0.86467633929999999" alpha="1" colorSpace="calibratedRGB"/>
                         </view>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="batman.jpg" id="rm3-3R-mOk">
-                            <rect key="frame" x="20" y="109" width="102" height="138"/>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="xWR-gi-w5N" userLabel="Background Image">
+                            <rect key="frame" x="18" y="106" width="116" height="157"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </imageView>
+                        <activityIndicatorView contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="white" id="0FW-7m-QN9">
+                            <rect key="frame" x="65" y="174" width="20" height="20"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="color" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        </activityIndicatorView>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="rm3-3R-mOk">
+                            <rect key="frame" x="21" y="110" width="110" height="149"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         </imageView>
                         <view contentMode="scaleToFill" id="uSp-CG-Se6" userLabel="BottomSeparator">
@@ -94,6 +104,9 @@
                             <state key="normal" title="Horarios">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </state>
+                            <connections>
+                                <action selector="viewTimes:" destination="-1" eventType="touchUpInside" id="HIP-yt-EEy"/>
+                            </connections>
                         </button>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The Hobbit: The Desolation of Smaug" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="3Yc-Xc-hQo">
                             <rect key="frame" x="142" y="222" width="170" height="35"/>
@@ -137,7 +150,7 @@
                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genero" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="bog-cG-7aE">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Género" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="bog-cG-7aE">
                             <rect key="frame" x="20" y="306" width="135" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
@@ -209,7 +222,6 @@
         </view>
     </objects>
     <resources>
-        <image name="batman.jpg" width="155" height="230"/>
         <image name="stars4.png" width="340" height="60"/>
     </resources>
 </document>
