--- a/MovieDetailViewController.xib
+++ b/MovieDetailViewController.xib
@@ -35,7 +35,7 @@
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="pOg-oW-jcY">
-                            <rect key="frame" x="0.0" y="38" width="320" height="233"/>
+                            <rect key="frame" x="0.0" y="98" width="320" height="173"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.86467633929999999" green="0.86467633929999999" blue="0.86467633929999999" alpha="1" colorSpace="calibratedRGB"/>
                         </imageView>
@@ -84,26 +84,10 @@
                             <rect key="frame" x="142" y="123" width="102" height="24"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="CZs-A4-H1K">
-                            <rect key="frame" x="177" y="47" width="123" height="44"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="zjx-uz-1rd">
+                            <rect key="frame" x="20" y="47" width="135" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" red="0.040252594429999997" green="0.34640587890000002" blue="0.61270805029999997" alpha="1" colorSpace="calibratedRGB"/>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                            <state key="normal" title="Ver Trailer">
-                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                            </state>
-                            <connections>
-                                <action selector="viewTrailer:" destination="-1" eventType="touchUpInside" id="hSj-6j-q2s"/>
-                            </connections>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="zjx-uz-1rd">
-                            <rect key="frame" x="20" y="47" width="123" height="44"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" red="0.040252594429999997" green="0.34640587890000002" blue="0.61270805029999997" alpha="1" colorSpace="calibratedRGB"/>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                            <state key="normal" title="Horarios">
-                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                            </state>
+                            <state key="normal" title="Ver Horarios"/>
                             <connections>
                                 <action selector="viewTimes:" destination="-1" eventType="touchUpInside" id="HIP-yt-EEy"/>
                             </connections>
@@ -211,6 +195,16 @@
                             <color key="textColor" red="0.040252594429999997" green="0.34640587890000002" blue="0.61270805029999997" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="5yH-aG-yEN">
+                            <rect key="frame" x="163" y="47" width="137" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" title="Ver Trailer">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="viewTrailer:" destination="-1" eventType="touchUpInside" id="uiK-48-a7g"/>
+                            </connections>
+                        </button>
                     </subviews>
                 </scrollView>
             </subviews>
